<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/max_margin"
        android:gravity="center"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/midnightBlue"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/margin"
            android:text="@string/notification_tag"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/nav_text_size"
            android:textStyle="bold"
            android:theme="@style/SwitchTheme" />

        <Switch
            android:id="@+id/sw_notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/margin"
            android:text="@string/notification_tag2"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/nav_text_size"
            android:textStyle="bold"
            android:theme="@style/SwitchTheme" />

    </LinearLayout>


</LinearLayout>